--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require": {
         "php": ">=7.0",
         "hoa/console": " 3.17.*",
-        "donatj/cli-toolkit": "^0.1.1"
+        "donatj/cli-toolkit": "^0.1.1",
+        "symfony/process": "^3.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^6.0"
